added more configuration

--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
 
 [packages]
 psycopg2 = "*"
 faker = "*"
+pyodbc = "*"
 
 [requires]
 python_version = "3.6"
